syntax = "proto3";

package deployments;

service Deployments {
  rpc Upload (UploadRequest) returns (Image) {}
  rpc GetImage (GetImageRequest) returns (Image) {}
}

message UploadRequest {
  bytes imageZip = 1;
  string projectID = 2; // TODO: infer from project name and user token
  string jobName = 3;
  string dockerfile = 4;
}

message GetImageRequest {
  string imageTag = 1;
  string projectID = 2; // TODO: infer from project name and user token
}

message Image {
  string imageID = 1;
  string projectID = 2;
  string jobName = 3;
  string dockerfile = 4;
  string imageTag = 5;
}
